--- a/AutoMethodMapper/Utils.AutoMethodMapper.csproj
+++ b/AutoMethodMapper/Utils.AutoMethodMapper.csproj
@@ -18,7 +18,7 @@
 		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/SkylineCommunications/Skyline.DataMiner.Utils.AutoMethodMapper.git</RepositoryUrl>
 		<AssemblyVersion>1.0.2</AssemblyVersion>
-		<PackageVersion>$(Version)</PackageVersion>
+		<PackageVersion>$(AssemblyVersion)</PackageVersion>
 		<FileVersion>$(AssemblyVersion)</FileVersion>
 		<Version>$(AssemblyVersion)</Version>
 	</PropertyGroup>
